<resources>
    //activity_main
    <string name="app_name">AnhChuan</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="hint">Nguyễn Tiến Đạt</string>
    <string name="admin123_gmail_com">admin123@gmail.com</string>
    <string name="birth_of_date">Birth of date</string>
    <string name="day_month_year">Day/month/year</string>
    <string name="phone_number">Phone number</string>
    <string name="phone">Phone number</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    //activity_sign_up
    <string name="login1">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up1">Sign Up</string>
    <string name="email1">Email</string>
    <string name="admin123_gmail_com1">admin123@gmail.com</string>
    <string name="password1">Password</string>
    <string name="password12">Nhập mật khẩu...</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
</resources>