<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_30sdp"
            android:background="@drawable/khung"
            android:padding="@dimen/_24sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_32ssp"
                android:textColor="#111827"
                app:layout_constraintTop_toBottomOf="@+id/Back"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="#6C7278"
                app:layout_constraintTop_toBottomOf="@+id/signUp"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#4D81E7"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="@+id/already"
                app:layout_constraintBottom_toBottomOf="@+id/already"
                app:layout_constraintStart_toEndOf="@+id/already"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="#6C7278"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/already"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/khungvien"
                android:paddingVertical="@dimen/_10sdp"
                android:hint="@string/hint"
                android:inputType="text"
                android:paddingStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <include
                android:id="@+id/Email1"
                layout="@layout/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@+id/fullName"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_of_date"
                android:textColor="#6C7278"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/Email1"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/khungvien"
                android:paddingVertical="@dimen/_10sdp"
                android:hint="@string/day_month_year"
                android:inputType="datetime"
                android:paddingStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/dateText"/>

            <ImageView
                android:id="@+id/dateicon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/datetime"
                android:layout_marginEnd="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="@+id/date"
                app:layout_constraintBottom_toBottomOf="@+id/date"
                app:layout_constraintEnd_toEndOf="@+id/date"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="#6C7278"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/khungvien"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/phone">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/united"/>

                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/arrow"/>

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="#E0E0E0"/>


                <EditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:background="@null"/>
            </LinearLayout>

            <include
                android:id="@+id/password1"
                layout="@layout/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/number"/>


            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonground"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/register"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/password1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>