<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:scrollbars="none">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_60sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_24sdp"

            android:background="@drawable/khung"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_60sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login1"
                android:textStyle="bold"
                android:textSize="@dimen/_32sdp"
                android:textColor="#111827"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/dont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="#6C7278"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUp"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up1"
                android:textStyle="bold"
                android:textColor="#447BE6"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@+id/dont"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/dont"/>

            <include
                android:id="@+id/Email1"
                layout="@layout/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/signUp"/>


           <include
               android:id="@+id/password1"
               layout="@layout/layout_password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_15sdp"
               app:layout_constraintTop_toBottomOf="@+id/Email1"/>

            <ImageView
                android:id="@+id/square"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/square"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password1"/>

            <TextView
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="#6C7278"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toEndOf="@+id/square"
                app:layout_constraintTop_toTopOf="@+id/square"
                app:layout_constraintBottom_toBottomOf="@+id/square"/>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#4D81E7"
                android:textStyle="bold"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintTop_toTopOf="@id/square"
                app:layout_constraintBottom_toBottomOf="@id/square"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonground"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/log_in"
                android:gravity="center"
                android:textColor="#FFFF"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintTop_toBottomOf="@+id/remember" />

            <ImageView
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/or"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/button"/>


            <LinearLayout
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/khungvien"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/or">


                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/googleicon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/continue_with_google"
                    android:textColor="#1A1C1E"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/khungvien"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/google">


                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/facebook"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/continue_with_facebook"
                    android:textColor="#1A1C1E"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>